--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,9 +1,5 @@
 version: 2
 updates:
-
-  # 1) TOP-LEVEL AGGREGATOR
-  #    Scans the root POM, but ignores any dependencies physically declared in
-  #    testing/**, <service>-acceptance-test/**, etc.
   - package-ecosystem: "maven"
     directory: "/"
     schedule:
@@ -13,14 +9,7 @@ updates:
     target-branch: "main"
     labels:
       - "dependencies"
-      - "common"
-    # ***IMPORTANT***
-    ignore:
-      - dependency-name: "*"
-        paths:
-          - "testing/**"
-          - "<service>-acceptance-test/**"
-          - "<service>-core-plus/**"
+      - "azure"
     groups:
       spring:
         patterns:
@@ -30,6 +19,7 @@ updates:
           - "org.springdoc:springdoc-openapi*"
         update-types:
           - "patch"
+          - "minor"
       osdu-core:
         patterns:
           - "org.opengroup.osdu:os-core-common"
@@ -37,12 +27,19 @@ updates:
           - "patch"
           - "minor"
           - "major"
+      azure:
+        patterns:
+          - "com.azure*"
+          - "com.azure.spring*"
+          - "com.microsoft.azure*"
+          - "com.microsoft.graph*"
+        update-types:
+          - "patch"
+          - "minor"
       build-tools:
         patterns:
           - "org.projectlombok:lombok"
           - "com.google.guava:guava"
-          - "io.github.git-commit-id:*"
-          - "org.springframework.boot:spring-boot-maven-plugin"
         update-types:
           - "minor"
           - "patch"
@@ -59,7 +56,8 @@ updates:
           - "com.fasterxml.jackson*"
           - "net.minidev:json-smart"
           - "com.google.code.gson:gson"
-          - "org.yaml:snakeyaml"
+          - "org.yaml:snakeyaml"          
+          - "org.json:json"
         update-types:
           - "minor"
           - "patch"
@@ -68,10 +66,19 @@ updates:
           - "commons-beanutils:commons-beanutils"
           - "io.github.resilience4j:*"
           - "org.apache.commons:*"
+          - "org.redisson:redisson"
+          - "io.netty:*"
+          - "io.lettuce:*"
         update-types:
           - "minor"
           - "patch"
-
+      security-updates:
+        patterns:
+          - "*"
+        update-types:
+          - "patch"
+          - "minor"
+          - "major"
   # 2) <service> CORE
   - package-ecosystem: "maven"
     directory: "/<service>-core"
@@ -111,94 +118,3 @@ updates:
           - "major"
           - "minor"
           - "patch"
-
-  # 4) SPI AWS (corrected directory to /provider/<service>-aws)
-  - package-ecosystem: "maven"
-    directory: "/provider/<service>-aws"
-    schedule:
-      interval: "never"
-    ignore:
-      - dependency-name: "*"
-
-  # 5) SPI GC
-  - package-ecosystem: "maven"
-    directory: "/provider/<service>-gc"
-    schedule:
-      interval: "never"
-    ignore:
-      - dependency-name: "*"
-
-  # 6) SPI IBM
-  - package-ecosystem: "maven"
-    directory: "/provider/<service>-ibm"
-    schedule:
-      interval: "never"
-    ignore:
-      - dependency-name: "*"
-
-  # 7) <service> CORE PLUS
-  - package-ecosystem: "maven"
-    directory: "/<service>-core-plus"
-    schedule:
-      interval: "never"
-    ignore:
-      - dependency-name: "*"
-
-  # 8) <service> ACCEPTANCE TEST
-  - package-ecosystem: "maven"
-    directory: "/<service>-acceptance-test"
-    schedule:
-      interval: "never"
-    ignore:
-      - dependency-name: "*"
-
-  # 9) TESTING 
-  - package-ecosystem: "maven"
-    directory: "/testing"
-    schedule:
-      interval: "never"
-    ignore:
-      - dependency-name: "*"
-  - package-ecosystem: "maven"
-    directory: "/testing/<service>-test-core-plus"
-    schedule:
-      interval: "never"
-    ignore:
-      - dependency-name: "*"
-  - package-ecosystem: "maven"
-    directory: "/testing/<service>-test-baremetal"
-    schedule:
-      interval: "never"
-    ignore:
-      - dependency-name: "*"
-  - package-ecosystem: "maven"
-    directory: "/testing/<service>-test-azure"
-    schedule:
-      interval: "never"
-    ignore:
-      - dependency-name: "*"
-  - package-ecosystem: "maven"
-    directory: "/testing/<service>-test-core"
-    schedule:
-      interval: "never"
-    ignore:
-      - dependency-name: "*"
-  - package-ecosystem: "maven"
-    directory: "/testing/<service>-test-ibm"
-    schedule:
-      interval: "never"
-    ignore:
-      - dependency-name: "*"
-  - package-ecosystem: "maven"
-    directory: "/testing/<service>-test-aws"
-    schedule:
-      interval: "never"
-    ignore:
-      - dependency-name: "*"
-  - package-ecosystem: "maven"
-    directory: "/testing/<service>-test-gc"
-    schedule:
-      interval: "never"
-    ignore:
-      - dependency-name: "*"
-  
